fix(wcp-input-code): align autosize
as we added some padding which is no hard coded in fttb

--- a/src/components/form/input-code/input-code.component.scss
+++ b/src/components/form/input-code/input-code.component.scss
@@ -38,7 +38,7 @@
 
   :host([autosize]) & {
     height: var(---wcp-input-code-height, auto);
-    min-height: 18px;
+    min-height: 28px;
   }
 
   :host([disabled]) & {
